*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@7419 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/appl/ftp/ChangeLog
+++ b/appl/ftp/ChangeLog
@@ -1,3 +1,8 @@
+1999-11-20  Assar Westerlund  <assar@sics.se>
+
+	* ftpd/ls.c (make_fileinfo): cast to allow for non-const
+ 	prototypes of readlink
+
 1999-11-12  Assar Westerlund  <assar@sics.se>
 
 	* ftpd/ftpd.c (args): use arg_counter for `l'
