--- a/appl/rsh/ChangeLog
+++ b/appl/rsh/ChangeLog
@@ -1,3 +1,8 @@
+1999-11-20  Assar Westerlund  <assar@sics.se>
+
+	* rsh.c (main): remember to close the priviledged sockets before
+ 	calling rlogin
+
 1999-11-02  Assar Westerlund  <assar@sics.se>
 
 	* rsh.c (main): redo the v4/v5 selection for consistency.  -4 ->
