*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@7421 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/kafs/ChangeLog
+++ b/lib/kafs/ChangeLog
@@ -1,3 +1,7 @@
+1999-11-22  Assar Westerlund  <assar@sics.se>
+
+	* afskrb5.c (afslog_uid_int): handle d->realm == NULL
+	
 1999-11-17  Assar Westerlund  <assar@sics.se>
 
 	* afskrb5.c (afslog_uid_int): don't look at the local realm at
