--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1999-11-22  Johan Danielsson  <joda@pdc.kth.se>
+
+	* lib/krb5/krb5.h: rc4->arcfour
+
+	* lib/krb5/crypto.c: rc4->arcfour
+
 1999-11-17  Assar Westerlund  <assar@sics.se>
 
 	* lib/krb5/get_addrs.c (find_all_addresses): change code to
@@ -107,7 +113,7 @@
  	(krb524_convert_creds_kdc and potentially some other functions
  	have changed prototypes)
 
-	* lib/hdb/Makefile.am: bump version to 3:1:0
+	* lib/hdb/Makefile.am: bump version to 4:0:1
 
 	* lib/asn1/Makefile.am: bump version to 1:3:0
 
