--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 1999-11-23  Assar Westerlund  <assar@sics.se>
 
+	* lib/krb5/crypto.c (ARCFOUR_string_to_key): change order of bytes
+ 	within unicode characters.  this should probably be done in some
+ 	arbitrarly complex way to do it properly and you would have to
+ 	know what character encoding was used for the password and salt
+ 	string.
+
 	* lib/krb5/addr_families.c (ipv4_uninteresting): ignore 0.0.0.0
 	(INADDR_ANY)
 	(ipv6_uninteresting): remove unused macro
