--- a/appl/ftp/ChangeLog
+++ b/appl/ftp/ChangeLog
@@ -1,3 +1,8 @@
+1999-11-25  Assar Westerlund  <assar@sics.se>
+
+	* ftp/krb4.c (krb4_auth): obtain the `local' address when doing
+	NAT.  also turn on passive mode.  From <thn@stacken.kth.se>
+
 1999-11-20  Assar Westerlund  <assar@sics.se>
 
 	* ftpd/ls.c (make_fileinfo): cast to allow for non-const
