*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@7441 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/kadmin/ChangeLog
+++ b/kadmin/ChangeLog
@@ -1,5 +1,7 @@
 1999-11-25  Assar Westerlund  <assar@sics.se>
 
+	* del_enctype.c (del_enctype): try not to leak memory
+
 	* version4.c (kadm_ser_mod): use kadm5_s_modify_principal (no
  	_with_key)
 
