kadmin del_enctype
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@7442 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,7 @@
 Changes in release 0.2e:
 
  * support for having several databases
+ * new command `del_enctype' in kadmin
  * strptime (and new strftime) add to roken
  * more paranoia about finding libdb
  * bug fixes
