*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@7444 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/appl/kx/ChangeLog
+++ b/appl/kx/ChangeLog
@@ -1,3 +1,7 @@
+1999-11-27  Assar Westerlund  <assar@sics.se>
+
+	* kxd.c (recv_conn): better errors when getting unrecognized data
+
 1999-11-18  Assar Westerlund  <assar@sics.se>
 
 	* krb5.c (krb5_destroy): free the correct part of the context
