--- a/source4/pidl/TODO
+++ b/source4/pidl/TODO
@@ -1,3 +1,8 @@
+- warn when union instances don't have a discriminant
+
+- EJS output backend shouldn't use the NDR levels stuff but instead 
+  as the "C levels" and NDR levels don't necessarily match.
+
 - true multiple dimension array / strings in arrays support
 
 - compatibility mode for generating MIDL-readable data:
