--- a/doc/ack.texi
+++ b/doc/ack.texi
@@ -49,6 +49,7 @@ Bugfixes, documentation, encouragement, and code has been contributed by:
 @item Derrick J Brashear
 @item Douglas E Engert
 @item Frank van der Linden
+@item Guido Günther
 @item Jason McIntyre
 @item Johan Ihrén
 @item Jun-ichiro itojun Hagino
