--- a/doc/ack.texi
+++ b/doc/ack.texi
@@ -71,6 +71,7 @@ Bugfixes, documentation, encouragement, and code has been contributed by:
 @item Rafal Malinowski
 @item Rainer Toebbicke
 @item Richard Nyberg
+@item Sho Hosoda, 細田 将
 @item Stefan Metzmacher
 @item Zeqing Xia
 @item Åke Sandgren 
