Use line continuation for line in hprop.8 manual page. The line is too wide and is cropped in some formats. From Jeremy C. Reed.
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@23863 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/kdc/hprop.8
+++ b/kdc/hprop.8
@@ -184,7 +184,8 @@ $ hprop slave-1 slave-2
 .Pp
 Convert a Kerberos 4 dump-file for use with a Heimdal KDC:
 .Bd -literal -offset indent
-$ hprop -n --source=krb4-dump -d /var/kerberos/principal.dump --master-key=/.k | hpropd -n
+$ hprop -n --source=krb4-dump -d /var/kerberos/principal.dump \\
+  --master-key=/.k | hpropd -n
 .Ed
 .Sh SEE ALSO
 .Xr hpropd 8
