--- a/kuser/kdigest.1
+++ b/kuser/kdigest.1
@@ -1,8 +1,3 @@
-.\" Things to fix:
-.\"   * correct section, and operating system
-.\"   * remove Op from mandatory flags
-.\"   * use better macros for arguments (like .Pa for files)
-.\"
 .Dd September 25, 2008
 .Dt KDIGEST SECTION
 .Os HEIMDAL
@@ -15,6 +10,8 @@ userland tool to access digest interface in the KDC
 .Op Fl -ccache= Ns Ar string
 .Op Fl -version
 .Op Fl -help
+command
+.Op arguments
 .Sh DESCRIPTION
 Supported options:
 .Bl -tag -width Ds
@@ -29,6 +26,192 @@ print version
 .It Xo
 .Fl -help
 .Xc
+.El
+.Pp
+Available commands are:
+.Bl -tag -width Ds
+.It Xo digest-probe
+.Op Fl -realm= Ns Ar string
+.Op Fl h | Fl -help
+.Xc
+.Bl -tag -width Ds
+.It Xo
+.Fl -realm= Ns Ar string
+.Xc
+Kerberos realm to communicate with
+.El
+.It Xo digest-server-init
+.Op Fl -type= Ns Ar string
+.Op Fl -kerberos-realm= Ns Ar realm
+.Op Fl -digest= Ns Ar digest-type
+.Op Fl -cb-type= Ns Ar type
+.Op Fl -cb-value= Ns Ar value
+.Op Fl -hostname= Ns Ar hostname
+.Op Fl -realm= Ns Ar string
+.Xc
+.Bl -tag -width Ds
+.It Xo
+.Fl -type= Ns Ar string
+.Xc
+digest type
+.It Xo
+.Fl -kerberos-realm= Ns Ar realm
+.Xc
+.It Xo
+.Fl -digest= Ns Ar digest-type
+.Xc
+digest type to use in the algorithm
+.It Xo
+.Fl -cb-type= Ns Ar type
+.Xc
+type of channel bindings
+.It Xo
+.Fl -cb-value= Ns Ar value
+.Xc
+value of channel bindings
+.It Xo
+.Fl -hostname= Ns Ar hostname
+.Xc
+hostname of the server
+.It Xo
+.Fl -realm= Ns Ar string
+.Xc
+Kerberos realm to communicate with
+.El
+.It Xo digest-server-request
+.Op Fl -type= Ns Ar string
+.Op Fl -kerberos-realm= Ns Ar realm
+.Op Fl -username= Ns Ar name
+.Op Fl -server-nonce= Ns Ar nonce
+.Op Fl -server-identifier= Ns Ar nonce
+.Op Fl -client-nonce= Ns Ar nonce
+.Op Fl -client-response= Ns Ar response
+.Op Fl -opaque= Ns Ar string
+.Op Fl -authentication-name= Ns Ar name
+.Op Fl -realm= Ns Ar realm
+.Op Fl -method= Ns Ar method
+.Op Fl -uri= Ns Ar uri
+.Op Fl -nounce-count= Ns Ar count
+.Op Fl -qop= Ns Ar qop
+.Op Fl -ccache= Ns Ar ccache
+.Xc
+.Bl -tag -width Ds
+.It Xo
+.Fl -type= Ns Ar string
+.Xc
+digest type
+.It Xo
+.Fl -kerberos-realm= Ns Ar realm
+.Xc
+.It Xo
+.Fl -username= Ns Ar name
+.Xc
+digest type
+.It Xo
+.Fl -server-nonce= Ns Ar nonce
+.Xc
+.It Xo
+.Fl -server-identifier= Ns Ar nonce
+.Xc
+.It Xo
+.Fl -client-nonce= Ns Ar nonce
+.Xc
+.It Xo
+.Fl -client-response= Ns Ar response
+.Xc
+.It Xo
+.Fl -opaque= Ns Ar string
+.Xc
+.It Xo
+.Fl -authentication-name= Ns Ar name
+.Xc
+.It Xo
+.Fl -realm= Ns Ar realm
+.Xc
+.It Xo
+.Fl -method= Ns Ar method
+.Xc
+.It Xo
+.Fl -uri= Ns Ar uri
+.Xc
+.It Xo
+.Fl -nounce-count= Ns Ar count
+.Xc
+.It Xo
+.Fl -qop= Ns Ar qop
+.Xc
+.It Xo
+.Fl -ccache= Ns Ar ccache
+.Xc
+Where the the credential cache is created when the KDC returns tickets
+.El
+.It Xo digest-client-request
+.Op Fl -type= Ns Ar string
+.Op Fl -username= Ns Ar name
+.Op Fl -password= Ns Ar password
+.Op Fl -server-nonce= Ns Ar nonce
+.Op Fl -server-identifier= Ns Ar nonce
+.Op Fl -client-nonce= Ns Ar nonce
+.Op Fl -opaque= Ns Ar string
+.Op Fl -realm= Ns Ar realm
+.Op Fl -method= Ns Ar method
+.Op Fl -uri= Ns Ar uri
+.Op Fl -nounce-count= Ns Ar count
+.Op Fl -qop= Ns Ar qop
+.Xc
+.Bl -tag -width Ds
+.It Xo
+.Fl -type= Ns Ar string
+.Xc
+digest type
+.It Xo
+.Fl -username= Ns Ar name
+.Xc
+digest type
+.It Xo
+.Fl -password= Ns Ar password
+.Xc
+.It Xo
+.Fl -server-nonce= Ns Ar nonce
+.Xc
+.It Xo
+.Fl -server-identifier= Ns Ar nonce
+.Xc
+.It Xo
+.Fl -client-nonce= Ns Ar nonce
+.Xc
+.It Xo
+.Fl -opaque= Ns Ar string
+.Xc
+.It Xo
+.Fl -realm= Ns Ar realm
+.Xc
+.It Xo
+.Fl -method= Ns Ar method
+.Xc
+.It Xo
+.Fl -uri= Ns Ar uri
+.Xc
+.It Xo
+.Fl -nounce-count= Ns Ar count
+.Xc
+.It Xo
+.Fl -qop= Ns Ar qop
+.Xc
+.El
+.It Xo ntlm-server-init
+.Op Fl -version= Ns Ar integer
+.Op Fl -kerberos-realm= Ns Ar string
+.Xc
+.Bl -tag -width Ds
+.It Xo
+.Fl -version= Ns Ar integer
+.Xc
+ntlm version
+.It Xo
+.Fl -kerberos-realm= Ns Ar string
+.Xc
+Kerberos realm to communicate with
 .El
 .\".Sh ENVIRONMENT
 .\".Sh FILES
