--- a/doc/ack.texi
+++ b/doc/ack.texi
@@ -46,6 +46,7 @@ Bugfixes, documentation, encouragement, and code has been contributed by:
 @item Cizzi Storm
 @item Daniel Kouril
 @item David Love
+@item David Markey
 @item Derrick J Brashear
 @item Douglas E Engert
 @item Frank van der Linden
