The man page for kdc(8) says --disable-DES, the source says --disable-des. From Arnaud Bergeron.
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@23954 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/kdc/kdc.8
+++ b/kdc/kdc.8
@@ -60,7 +60,7 @@
 .Xc
 .Oc
 .Op Fl -detach
-.Op Fl -disable-DES
+.Op Fl -disable-des
 .Op Fl -addresses= Ns Ar list of addresses
 .Ek
 .Sh DESCRIPTION
@@ -152,7 +152,7 @@ If only a subset is desired, or the automatic detection fails, this
 option might be used.
 .It Fl -detach
 detach from pty and run as a daemon.
-.It Fl -disable-DES
+.It Fl -disable-des
 disable add des encryption types, makes the kdc not use them.
 .El
 .Pp
