We stop writing change logs, see the source code version control systems history log instead
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@24023 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+
+We stop writing change logs, see the source code version control systems history log instead
+	
 2008-07-28  Love Hornquist Astrand  <lha@h5l.org>
 
 	* lib/krb5/v4_glue.c: The "kaserver" part of Heimdal occasionally
