try slight better english, from Julius
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@24048 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/krb5/verify_krb5_conf.8
+++ b/lib/krb5/verify_krb5_conf.8
@@ -45,7 +45,7 @@
 reads the configuration file
 .Pa krb5.conf ,
 or the file given on the command line,
-and parses it, thereby verifying that the syntax is not correctly wrong.
+parses it, checking verifying that the syntax is not correctly wrong.
 .Pp
 If the file is syntactically correct,
 .Nm
