--- a/source4/setup/schema-map-openldap-2.3
+++ b/source4/setup/schema-map-openldap-2.3
@@ -11,6 +11,9 @@ distinguishedName
 description
 cn
 top
+entryTTL
+uidNumber
+gidNumber
 #The memberOf plugin provides this attribute
 memberOf
 #These conflict with OpenLDAP builtins
@@ -42,3 +45,7 @@ modifyTimeStamp:samba4ModifyTimestamp
 1.3.6.1.4.1.1466.115.121.1.38:1.3.6.1.4.1.1466.115.121.1.44
 #Treat Object(DN-Binary) as a binary blob
 1.2.840.113556.1.4.903:1.3.6.1.4.1.1466.115.121.1.40
+#Treat Object(DN-String) as a binary blob
+1.2.840.113556.1.4.904:1.3.6.1.4.1.1466.115.121.1.40
+#Treat UTC-Time as GeneralizedTime
+1.3.6.1.4.1.1466.115.121.1.53:1.3.6.1.4.1.1466.115.121.1.24
